--- a/index_1.html
+++ b/index_1.html
@@ -16,35 +16,45 @@
 
     <link rel="stylesheet" href="css/index_1.css">
 </head>
-<body class="body_1">
-<div class="bg-home" id="container">
+<body>
+<div class="container">
     <header>
-        <p>SHOP KONFIGURATION</p>
-        <h1>Eingabe Ihrer Lieferadresse</h1>
-        <div class="line"></div>
-        <div class="end_header">
-            <p>Ortung via GPS</p>
+        <div class="contaier">
+            <div class="row">
+                <p>SHOP KONFIGURATION</p>
+                <h1>Eingabe Ihrer Lieferadresse</h1>
+                <div class="line"></div>
+                <div class="end_header">
+                    <p>Ortung via GPS</p>
+                </div>
+            </div>
         </div>
     </header>
-    <div class="row"></div>
     <content>
-        <div class="form-group">
-            <input type="text" class="form-control content_form" placeholder="Maximilian Mustermann" value="">
-            <input type="text" class="form-control content_form" placeholder="Straße Hausnummer " value="">
-            <input type="text" class="form-control content_form" placeholder="Stadt" value="">
-            <input type="text" class="form-control content_form" placeholder="PLZ" value="">
-        </div>
-        <div class="btn_choose">
-            <p class="col-xs-10">Adresse für zukünftige Bestellungen speichern</p>
-            <label class="switch col-xs-2">
-                <input type="checkbox" checked>
-                <span class="slider round"></span>
-            </label>
+        <div class="container">
+            <div class="row">
+                <div class="form-group">
+                    <input type="text" class="form-control content_form" placeholder="Maximilian Mustermann" value="">
+                    <input type="text" class="form-control content_form" placeholder="Straße Hausnummer " value="">
+                    <input type="text" class="form-control content_form" placeholder="Stadt" value="">
+                    <input type="text" class="form-control content_form" placeholder="PLZ" value="">
+                </div>
+                <div class="btn_choose">
+                    <p class="col-xs-10">Adresse für zukünftige Bestellungen speichern</p>
+                    <label class="switch col-xs-2">
+                        <input type="checkbox" checked>
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
         </div>
     </content>
-    <div class="row"></div>
     <footer>
-        <p>Zum Shop</p>
+       <div class="container">
+           <div class="row">
+               <p>Zum Shop</p>
+           </div>
+       </div>
     </footer>
 </div>
 </body>
