--- a/index_1.html
+++ b/index_1.html
@@ -22,14 +22,13 @@
         <div class="row">
             <p>SHOP KONFIGURATION</p>
             <h1>Eingabe Ihrer Lieferadresse</h1>
-            <div class="line"></div>
-            <div class="end_header">
-                <p>Ortung via GPS</p>
-            </div>
         </div>
     </header>
     <content>
         <div class="row">
+            <div class="content_top">
+                <p>Ortung via GPS</p>
+            </div>
             <div class="form-group">
                 <input type="text" class="form-control content_form" placeholder="Maximilian Mustermann" value="">
                 <input type="text" class="form-control content_form" placeholder="Straße Hausnummer " value="">
