index - 1 (lost background)

--- a/index_1.html
+++ b/index_1.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/index_1.css">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
    <div class="row">
        <header>
            <div class="container">
