--- a/index_1.html
+++ b/index_1.html
@@ -52,8 +52,8 @@
                     <div class="btn_choose">
                        <div class="container">
                            <div class="row">
-                               <p class="col-xs-10">Adresse für zukünftige Bestellungen speichern</p>
-                              <label class="switch col-xs-2">
+                               <p class="col-xs-8">Adresse für zukünftige Bestellungen speichern</p>
+                              <label class="switch col-xs-offset-2 col-xs-2">
                                   <input type="checkbox" checked>
                                   <span class="slider round"></span>
                               </label>
