--- a/index_2.html
+++ b/index_2.html
@@ -16,21 +16,23 @@
 
     <link rel="stylesheet" href="css/index_2.css">
 </head>
-<body class="body_2">
-<div class="bg-home " id="container">
-    <header class="header_2">
-        <span class="col-xs-1 fa fa-angle-left back"></span>
-        <p class="col-xs-offset-1 col-xs-8 header_top_p">
-            SUCHE
-        </p>
-        <div class="search">
-            <div class="form-group col-xs-10">
-                <input type="text" class="form-control content_form" placeholder="Suchbegriff eingeben" spellcheck="false" value="">
+<body>
+<div class="container-fluid">
+    <div class="row">
+        <header>
+            <span class="col-xs-1 fa fa-angle-left back"></span>
+            <p class="col-xs-offset-1 col-xs-8 header_top_p">
+                SUCHE
+            </p>
+            <div class="search">
+                <div class="form-group col-xs-10">
+                    <input type="text" class="form-control content_form" placeholder="Suchbegriff eingeben" spellcheck="false" value="">
+                </div>
+                <span class="col-xs-2 search_icon"></span>
             </div>
-            <span class="col-xs-2 search_icon"></span>
-        </div>
-    </header>
-    <content class ="content_fixed">
+        </header>
+    </div>
+    <content>
         <div class="result">
             <p class="view_result">Lorem ipsum dolor</p>
             <p class="view_result">Lorem ipsum dolor</p>
