--- a/index_2.html
+++ b/index_2.html
@@ -20,35 +20,41 @@
 <div class="container-fluid">
     <div class="row">
         <header>
-            <span class="col-xs-1 fa fa-angle-left back"></span>
-            <p class="col-xs-offset-1 col-xs-8 header_top_p">
-                SUCHE
-            </p>
-            <div class="search">
-                <div class="form-group col-xs-10">
-                    <input type="text" class="form-control content_form" placeholder="Suchbegriff eingeben" spellcheck="false" value="">
+            <div class="container">
+                <div class="row"><span class="col-xs-1 fa fa-angle-left back"></span>
+                    <p class="col-xs-offset-1 col-xs-8 header_top_p">
+                        SUCHE
+                    </p>
                 </div>
-                <span class="col-xs-2 search_icon"></span>
+                <div class="row">
+                    <div class="search">
+                        <div class="form-group col-xs-10">
+                            <input type="text" class="form-control content_form" placeholder="Suchbegriff eingeben" spellcheck="false" value="">
+                        </div>
+                        <span class="col-xs-2 search_icon"></span>
+                    </div>
+                </div>
             </div>
         </header>
     </div>
-    <content>
-        <div class="result">
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
-            <p class="view_result">Lorem ipsum dolor</p>
+    <div class="row">
+        <div class="container">
+            <content>
+                <div class="result">
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                    <p class="view_result">Lorem ipsum dolor</p>
+                </div>
+            </content>
         </div>
-    </content>
-    <div class="row"></div>
-    <footer style="height: 0">
-    </footer>
+    </div>
 </div>
 </body>
 </html>
