commit for page 4

--- a/index_4.html
+++ b/index_4.html
@@ -18,146 +18,112 @@
     <link rel="stylesheet" href="css/index_4.css">
 </head>
 <body>
-<div class="container bg-home">
+<div class="container-fluid bg-home">
     <div class="row">
         <div class="content_feed_2">
-            <div class="row">
-                <span class="col-xs-1 content_feed_3_back"></span>
-                <h1 class="col-xs-9">SHOP</h1>
-                <span class="col-xs-1 pull-right content_feed_2_close"></span>
-            </div>
-            <div class="row">
-                <div class="newfeed_2_top">
-                    <p>
-                        Suchbegriff
-                    </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <span class="col-xs-2 content_feed_3_back"></span>
+                        <h1 class="col-xs-6 col-xs-offset-2">SHOP</h1>
+                        <span class="col-xs-2 pull-right content_feed_2_close"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="newfeed_line"></div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="newfeed_2_top">
+                            <p>
+                                Suchbegriff
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!--END content_feed_2-->
-
-    <content class="content_4">
-        <div class="carousel slide" data-ride="carousel" id="quote-carousel">
-            <div class="carousel-inner">
-                <div class="item active">
-                    <div class="content_pad">
-                        <h1>Produkthighlight</h1>
-                        <div class="product">
-                            <img src="imgs/icon_product.png" alt="">
-                            <div class="content_text">
-                                <h1 class="name">
-                                    Agnus Castus AL Filmtabletten
-                                </h1>
-                                <p class="own">
-                                    ALIUD PHARMA®
-                                </p>
-                            </div>
-                            <div class="content_price">
-                                <div class="col-xs-6 price">
-                                    <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+    <div class="row">
+        <div class="container">
+            <div class="row">
+                <content class="content_4">
+                    <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <div class="content_pad">
+                                    <h1>Produkthighlight</h1>
+                                    <div class="product">
+                                        <img src="shop/index_4/produce_4.png" alt="">
+                                        <div class="content_text">
+                                            <h1 class="name">
+                                                Agnus Castus AL Filmtabletten
+                                            </h1>
+                                            <p class="own">
+                                                ALIUD PHARMA®
+                                            </p>
+                                        </div>
+                                        <div class="content_price">
+                                            <div class="col-xs-6 price">
+                                                <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+                                            </div>
+                                            <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
+                                        </div>
+                                    </div>
                                 </div>
-                                <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
+                            </div>
+                            <div class="item">
+                                <div class="content_pad">
+                                    <h1>Produkthightlight</h1>
+                                    <div class="product">
+                                        <img src="shop/index_4/produce_4.png" alt="">
+                                        <div class="content_text">
+                                            <h1 class="name">
+                                                Agnus Castus AL Filmtabletten
+                                            </h1>
+                                            <p class="own">
+                                                ALIUD PHARMA
+                                            </p>
+                                        </div>
+                                        <div class="content_price">
+                                            <div class="col-xs-6 price">
+                                                <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+                                            </div>
+                                            <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="content_pad">
+                                    <h1>Produkthightlight</h1>
+                                    <div class="product">
+                                        <img src="shop/index_4/produce_4.png" alt="">
+                                        <div class="content_text">
+                                            <h1 class="name">
+                                                Agnus Castus AL Filmtabletten
+                                            </h1>
+                                            <p class="own">
+                                                ALIUD PHARMA
+                                            </p>
+                                        </div>
+                                        <div class="content_price">
+                                            <div class="col-xs-6 price">
+                                                <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+                                            </div>
+                                            <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <a data-slide="prev" href="#quote-carousel" class="left carousel-control remove-left"><i
+                                class="fa fa-chevron-left"></i></a>
+                        <a data-slide="next" href="#quote-carousel" class="right carousel-control remove-right"><i
+                                class="fa fa-chevron-right"></i></a>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="content_pad">
-                        <h1>Produkthightlight</h1>
-                        <div class="product">
-                            <img src="imgs/icon_product.png" alt="">
-                            <div class="content_text">
-                                <h1 class="name">
-                                    Agnus Castus AL Filmtabletten
-                                </h1>
-                                <p class="own">
-                                    ALIUD PHARMA
-                                </p>
-                            </div>
-                            <div class="content_price">
-                                <div class="col-xs-6 price">
-                                    <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
-                                </div>
-                                <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="content_pad">
-                        <h1>Produkthightlight</h1>
-                        <div class="product">
-                            <img src="imgs/icon_product.png" alt="">
-                            <div class="content_text">
-                                <h1 class="name">
-                                    Agnus Castus AL Filmtabletten
-                                </h1>
-                                <p class="own">
-                                    ALIUD PHARMA
-                                </p>
-                            </div>
-                            <div class="content_price">
-                                <div class="col-xs-6 price">
-                                    <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
-                                </div>
-                                <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a data-slide="prev" href="#quote-carousel" class="left carousel-control remove-left"><i
-                    class="fa fa-chevron-left"></i></a>
-            <a data-slide="next" href="#quote-carousel" class="right carousel-control remove-right"><i
-                    class="fa fa-chevron-right"></i></a>
-        </div>
-    </content>
-
-    <footer class="" id="footer">
-        <div class="row">
-            <div id="exTab1">
-                <ul class="nav nav-pills">
-                    <li class="active footer_left">
-                        <a href="" data-toggle="tab"><span class="fa fa-th-large"></span>
-                            <p style="text-align: center;vertical-align: middle">News</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" data-toggle="tab"><span class="fa fa-graduation-cap coaching"></span>
-                            <p style="text-align: center;vertical-align: middle">Coachings</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" data-toggle="tab"><span class="fa fa-comment-o"></span><br>
-                            <p style="text-align: center;vertical-align: middle">Zenzai</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" data-toggle="tab"><span class="fa  fa-shopping-cart"></span>
-                            <p style="text-align: center;vertical-align: middle">Shop</p>
-                        </a>
-                    </li>
-                    <li class="footer_right">
-                        <a href="" data-toggle="tab"><span class="fa fa-user-o"></span>
-                            <p style="text-align: center;vertical-align: middle">Profile</p>
-                        </a>
-                    </li>
-                </ul>
+                </content>
             </div>
         </div>
-    </footer>
+    </div>
 </div>
 </body>
-<script>
-    //    $(document).ready(function () {
-    //        $('#media').carousel({
-    //            pause: true,
-    //            interval: 5200,
-    //        });
-    //    });
-</script>
 </html>
