--- a/index_2.html
+++ b/index_2.html
@@ -21,22 +21,27 @@
     <div class="row">
         <header>
             <div class="container">
-                <div class="row"><span class="col-xs-1 fa fa-angle-left back"></span>
-                    <p class="col-xs-offset-1 col-xs-8 header_top_p">
-                        SUCHE
-                    </p>
+                <div class="row">
+                   <div class="header_top">
+                       <span class="col-xs-1 fa fa-angle-left back"></span>
+                       <p class="col-xs-offset-1 col-xs-8 header_top_p">
+                           SUCHE
+                       </p>
+                   </div>
                 </div>
                 <div class="row">
                     <div class="search">
                         <div class="form-group col-xs-10">
-                            <input type="text" class="form-control content_form" placeholder="Suchbegriff eingeben" spellcheck="false" value="">
+                            <input type="text" class="form-control content_form" placeholder="Suchbegriff eingeben"
+                                   spellcheck="false" value="">
                         </div>
-                        <span class="col-xs-2 search_icon"></span>
+                        <img src="imgs/icon_search.png" alt="">
                     </div>
                 </div>
             </div>
         </header>
     </div>
+    <div class="header-fixed"></div>
     <div class="row">
         <div class="container">
             <content>
