--- a/index_2.html
+++ b/index_2.html
@@ -22,12 +22,12 @@
         <header>
             <div class="container">
                 <div class="row">
-                   <div class="header_top">
-                       <span class="col-xs-1 fa fa-angle-left back"></span>
-                       <p class="col-xs-offset-1 col-xs-8 header_top_p">
-                           SUCHE
-                       </p>
-                   </div>
+                    <div class="header_top">
+                        <span class="col-xs-1 fa fa-angle-left back"></span>
+                        <p class="col-xs-offset-1 col-xs-8 header_top_p">
+                            SUCHE
+                        </p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="search">
@@ -45,18 +45,18 @@
     <div class="row">
         <div class="container">
             <content>
-                <div class="result">
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                    <p class="view_result">Lorem ipsum dolor</p>
-                </div>
+               <div class="row">
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Lorem ipsum dolor</p>
+               </div>
             </content>
         </div>
     </div>
