--- a/index_12.html
+++ b/index_12.html
@@ -64,9 +64,19 @@
                                                             <p>Sonnentorapotheke</p>
                                                         </div>
                                                         <div class="row">
-                                                            <img src="imgs/icon_content_1.png" alt="">
+                                                            <div class="container">
+                                                               <div class="row">
+                                                                   <div class="col-xs-1">
+                                                                       <img src="imgs/icon_content_1.png" alt="">
+                                                                   </div>
+                                                                   <div class="col-xs-10">
+                                                                      <div class="row">
+                                                                          <p>Aktiv</p>
+                                                                      </div>
+                                                                   </div>
+                                                               </div>
+                                                            </div>
                                                         </div>
-                                                        Aktiv
                                                     </div>
                                                 </div>
                                             </div>
