--- a/index_12.html
+++ b/index_12.html
@@ -41,20 +41,19 @@
     <div class="row">
         <content>
             <div class="container">
-
+                <div class="row">
+                    <div class="banner_content_1">
+                        <h1>ARZNEIMITTELBESTELLUNGEN</h1>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="container">
-                        <div class="row">
-                            <div class="banner_content_1">
-                                <h1>ARZNEIMITTELBESTELLUNGEN</h1>
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="pro_1">
                                 <div class="container">
                                     <div class="row">
                                         <div class="media">
-                                            <div class="col-xs-11">
+                                            <div class="col-xs-10">
                                                 <div class="media-body">
                                                     <div class="container">
                                                         <div class="row">
@@ -65,26 +64,24 @@
                                                         </div>
                                                         <div class="row">
                                                             <div class="container">
-                                                               <div class="row">
-                                                                   <div class="col-xs-1">
-                                                                       <img src="imgs/icon_content_1.png" alt="">
-                                                                   </div>
-                                                                   <div class="col-xs-10">
-                                                                      <div class="row">
-                                                                          <p>Aktiv</p>
-                                                                      </div>
-                                                                   </div>
-                                                               </div>
+                                                                <div class="row">
+                                                                    <div class="col-xs-1">
+                                                                        <img src="imgs/icon_content_1.png" alt="">
+                                                                    </div>
+                                                                    <div class="col-xs-10">
+                                                                        <div class="row">
+                                                                            <p class="icon">Aktiv</p>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xs-1">
+                                            <div class="col-xs-2">
                                                 <div class="media-right">
-                                                    <a href="#">
-                                                        <img src="imgs/icon_next.png" alt="">
-                                                    </a>
+                                                    <span class="fa fa-angle-right back"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -94,12 +91,15 @@
                         </div>
                         <div class="row">
                             <div class="list_price">
-                                <div class="col-xs-6 money">
-                                    <h1> 35,90</h1>
-                                    <img src="imgs/icon_euro.png" alt="">
-                                </div>
-                                <div class="col-xs-6 prop_content">
-                                    <span>Problem melden</span>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-xs-6 money">
+                                            <h1> 35,90 € </h1>
+                                        </div>
+                                        <div class="col-xs-6 prop_content">
+                                            <p>Problem melden</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -110,32 +110,56 @@
                     <div class="container">
                         <div class="row">
                             <div class="pro_1">
-                                <div class="media">
-                                    <div class="media-body">
-                                        <h4 class="media-heading">Bestellung vom 10.09.2017</h4>
-                                        <span>Sonnentorapotheke</span>
-                                        <br>
-                                        <span>
-                <img src="imgs/icon_content_2.png" alt="">
-                wird vermittelt
-                </span>
-                                    </div>
-                                    <div class="media-right">
-                                        <a href="#">
-                                            <img src="imgs/icon_next.png" alt="">
-                                        </a>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="media">
+                                            <div class="col-xs-10">
+                                                <div class="media-body">
+                                                    <div class="container">
+                                                        <div class="row">
+                                                            <h1 class="media-heading">Bestellung vom 10.09.2017</h1>
+                                                        </div>
+                                                        <div class="row">
+                                                            <p>Sonnentorapotheke</p>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="container">
+                                                                <div class="row">
+                                                                    <div class="col-xs-1">
+                                                                        <img src="imgs/icon_content_1.png" alt="">
+                                                                    </div>
+                                                                    <div class="col-xs-10">
+                                                                        <div class="row">
+                                                                            <p class="icon">Aktiv</p>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-2">
+                                                <div class="media-right">
+                                                    <span class="fa fa-angle-right back"></span>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="list_price">
-                                <div class="col-xs-6 money">
-                                    <h1> 120,12 </h1>
-                                    <img src="imgs/icon_euro.png" alt="">
-                                </div>
-                                <div class="col-xs-6 prop_content">
-                                    <span>Mehr erfahren</span>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-xs-6 money">
+                                            <h1> 35,90 € </h1>
+                                        </div>
+                                        <div class="col-xs-6 prop_content">
+                                            <p>Problem melden</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -146,32 +170,56 @@
                     <div class="container">
                         <div class="row">
                             <div class="pro_1">
-                                <div class="media">
-                                    <div class="media-body">
-                                        <h4 class="media-heading">Bestellung vom 10.09.2017</h4>
-                                        <span>Sonnentorapotheke</span>
-                                        <br>
-                                        <span>
-                <img src="imgs/index_12/icon_content_remove.png" alt="">
-                Storniert
-                </span>
-                                    </div>
-                                    <div class="media-right">
-                                        <a href="#">
-                                            <img src="imgs/index_10/icon_next.png" alt="">
-                                        </a>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="media">
+                                            <div class="col-xs-10">
+                                                <div class="media-body">
+                                                    <div class="container">
+                                                        <div class="row">
+                                                            <h1 class="media-heading">Bestellung vom 10.09.2017</h1>
+                                                        </div>
+                                                        <div class="row">
+                                                            <p>Sonnentorapotheke</p>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="container">
+                                                                <div class="row">
+                                                                    <div class="col-xs-1">
+                                                                        <img src="imgs/icon_content_1.png" alt="">
+                                                                    </div>
+                                                                    <div class="col-xs-10">
+                                                                        <div class="row">
+                                                                            <p class="icon">Aktiv</p>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-2">
+                                                <div class="media-right">
+                                                    <span class="fa fa-angle-right back"></span>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="list_price">
-                                <div class="col-xs-6 money">
-                                    <h1> 120,12</h1>
-                                    <img src="imgs/icon_euro.png" alt="">
-                                </div>
-                                <div class="col-xs-6 prop_content">
-                                    <span>Mehr erfahren</span>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-xs-6 money">
+                                            <h1> 35,90 € </h1>
+                                        </div>
+                                        <div class="col-xs-6 prop_content">
+                                            <p>Problem melden</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -180,25 +228,37 @@
 
                 <div class="row">
                     <div class="title_end">
-                        <h1>BESTELLUNGEN ÜBER AMAZON</h1>
+                        <p>BESTELLUNGEN ÜBER AMAZON</p>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="end">
-                        <div class="media">
+                    <div class="container">
+                        <div class="row">
                             <div class="container">
                                 <div class="row">
-                                    <div class="media-body">
-                                        <h4 class="media-heading">Bestellhistorie bei Amazon
-                                        </h4>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="media-right">
-                                        <a href="#">
-                                            <img src="imgs/index_10/icon_next.png" alt="">
-                                        </a>
+                                    <div class="pro_1 bottom">
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="media">
+                                                    <div class="col-xs-10">
+                                                        <div class="media-body">
+                                                            <div class="container">
+                                                                <div class="row">
+                                                                    <h1 class="media-heading">Bestellung vom
+                                                                        10.09.2017</h1>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xs-2">
+                                                        <div class="media-right">
+                                                            <span class="fa fa-angle-right back"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
