--- a/index_13.html
+++ b/index_13.html
@@ -25,7 +25,7 @@
                     <div class="header_top">
                         <span class="col-xs-2 fa fa-angle-left back "></span>
                         <p class="col-xs-8 header_top_p">
-                            WARENKORB
+                            BESTELLDETAIL
                         </p>
                     </div>
                 </div>
@@ -43,220 +43,111 @@
             <div class="container">
                 <div class="row">
                     <div class="banner_content_1">
-                        <h1>ARZNEIMITTELBESTELLUNGEN</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="pro_1">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="media">
-                                            <div class="col-xs-10">
-                                                <div class="media-body">
-                                                    <div class="container">
-                                                        <div class="row">
-                                                            <h1 class="media-heading">Bestellung vom 10.09.2017</h1>
-                                                        </div>
-                                                        <div class="row">
-                                                            <p>Sonnentorapotheke</p>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="container">
-                                                                <div class="row">
-                                                                    <div class="col-xs-1">
-                                                                        <img src="imgs/icon_content_2.png" alt="">
-                                                                    </div>
-                                                                    <div class="col-xs-10">
-                                                                        <div class="row">
-                                                                            <p class="icon">Aktiv</p>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-2">
-                                                <div class="media-right">
-                                                    <span class="fa fa-angle-right back"></span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="list_price">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-xs-6 money">
-                                            <h1> 35,90 € </h1>
-                                        </div>
-                                        <div class="col-xs-6 prop_content">
-                                            <p>Problem melden</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <h1>BESTELLUNG VOM 10.09.2017</h1>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="pro_1">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="media">
-                                            <div class="col-xs-10">
-                                                <div class="media-body">
-                                                    <div class="container">
-                                                        <div class="row">
-                                                            <h1 class="media-heading">Bestellung vom 10.09.2017</h1>
-                                                        </div>
-                                                        <div class="row">
-                                                            <p>Sonnentorapotheke</p>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="container">
-                                                                <div class="row">
-                                                                    <div class="col-xs-1">
-                                                                        <img src="imgs/icon_content_1.png" alt="">
-                                                                    </div>
-                                                                    <div class="col-xs-10">
-                                                                        <div class="row">
-                                                                            <p class="icon">Aktiv</p>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-2">
-                                                <div class="media-right">
-                                                    <span class="fa fa-angle-right back"></span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="list_price">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-xs-6 money">
-                                            <h1> 35,90 € </h1>
-                                        </div>
-                                        <div class="col-xs-6 prop_content">
-                                            <p>Problem melden</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="pro_1">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="media">
-                                            <div class="col-xs-10">
-                                                <div class="media-body">
-                                                    <div class="container">
-                                                        <div class="row">
-                                                            <h1 class="media-heading">Bestellung vom 10.09.2017</h1>
-                                                        </div>
-                                                        <div class="row">
-                                                            <p>Sonnentorapotheke</p>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="container">
-                                                                <div class="row">
-                                                                    <div class="col-xs-1">
-                                                                        <img src="imgs/icon_content_3.png" alt="">
-                                                                    </div>
-                                                                    <div class="col-xs-10">
-                                                                        <div class="row">
-                                                                            <p class="icon">Aktiv</p>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-2">
-                                                <div class="media-right">
-                                                    <span class="fa fa-angle-right back"></span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="list_price">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-xs-6 money">
-                                            <h1> 35,90 € </h1>
-                                        </div>
-                                        <div class="col-xs-6 prop_content">
-                                            <p>Problem melden</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="title_end">
-                        <p>BESTELLUNGEN ÜBER AMAZON</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="pro_1 bottom">
-                                        <div class="container">
+                    <div class="content-view">
+                        <div class="container">
+                            <div class="row">
+                                <div class="content-top">
+                                    <div class="container">
+                                        <div class="col-xs-3 img">
                                             <div class="row">
-                                                <div class="media">
-                                                    <div class="col-xs-10">
-                                                        <div class="media-body">
-                                                            <div class="container">
-                                                                <div class="row">
-                                                                    <h1 class="media-heading">Bestellung vom
-                                                                        10.09.2017</h1>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-xs-2">
-                                                        <div class="media-right">
-                                                            <span class="fa fa-angle-right back"></span>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                <img src="imgs/aspirin.png" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-9 content-text">
+                                            <h1>Aspirin 500g überzogene Filmtable…
+                                            </h1>
+                                            <p>Bayer Vital GmbH</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="content-mid">
+                                    <div class="container">
+                                        <div class="col-xs-6">
+                                            <div class="container-mid-left">
+                                                <h1>2</h1>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="container-mid-right">
+                                                <h1>35,90 €</h1>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="content-mid">
+                                    <div class="container">
+                                        <div class="col-xs-6">
+                                            <div class="row">
+                                                <p><span>gewählte Lieferoption</span>: Flash</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="container-mid-right">
+                                                <h1>6,99 €</h1>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="content-view">
+                        <div class="container">
+                            <div class="row">
+                                <div class="content-top">
+                                    <div class="container">
+                                        <div class="col-xs-3 img">
+                                            <div class="row">
+                                                <img src="imgs/aspirin.png" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-9 content-text">
+                                            <h1>Aspirin 500g überzogene Filmtable…
+                                            </h1>
+                                            <p>Bayer Vital GmbH</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="content-mid">
+                                    <div class="container">
+                                        <div class="col-xs-6">
+                                            <div class="container-mid-left">
+                                                <h1>2</h1>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="container-mid-right">
+                                                <h1>35,90 €</h1>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="content-mid">
+                                    <div class="container">
+                                        <div class="col-xs-6">
+                                            <div class="row">
+                                                <p><span>gewählte Lieferoption</span>: Flash</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="container-mid-right">
+                                                <h1>6,99 €</h1>
                                             </div>
                                         </div>
                                     </div>
@@ -267,6 +158,12 @@
                 </div>
             </div>
         </content>
+    </div>
+
+    <div class="row">
+        <footer>
+            <p>Bestellung neu aufgeben</p>
+        </footer>
     </div>
 </div>
 </body>
